# sora-editor

./: .gitignore  .gitmodules  .travis.yml  README.es.md  README.jp.md  README.md  README.zh-cn.md  README_zh.md  build.gradle  build.gradle.kts  build.gradle.kts1  debug.jks  gradle.properties  gradlew  keybindings.md  maven-publish.gradle  settings.gradle  settings.gradle.kts  settings.gradle.kts1
.github/: dependabot.yml
app/: build.gradle  build.gradle.kts  proguard-rules.pro
bom/: build.gradle.kts
build-logic/: build.gradle.kts  gradle.properties  settings.gradle.kts
buildSrc/: build.gradle  build.gradle.kts
debug-logger/: build.gradle
docs/: Initialization.md  README.md  _coverpage.md  _navbar.md  _sidebar.md  api.md  changelog.md  index.html
editor/: build.gradle  build.gradle.kts  gradle.properties
editor-bom/: build.gradle.kts
editor-compose/: build.gradle.kts  gradle.properties
editor-kt/: build.gradle  build.gradle.kts  gradle.properties
editor-lsp/: README.md  build.gradle.kts  consumer-rules.pro  gradle.properties
gradle/: libs.versions.toml
jflex/: JavaType.java  java.flex
language-base/: build.gradle
language-css3/: build.gradle
language-html/: build.gradle
language-java/: build.gradle  build.gradle.kts  gradle.properties
language-monarch/: README.md  build.gradle.kts  gradle.properties
language-phantom/: test.text
language-python/: build.gradle
language-s5d/: build.gradle
language-text-mate/: build.gradle
language-textmate-packs/: .gitignore  README.md
oniguruma-native/src/main/cpp/: CMakeLists.txt  binding.cpp
(+2001 files in other folders)
